change photos to webp, add aria-label, fix contrast

--- a/css/resolution-992px.css
+++ b/css/resolution-992px.css
@@ -47,6 +47,10 @@ h1 {
     align-items: center;
 }
 
+#bloc-2-services, #bloc-4-portofolio {
+    margin: 30px;
+}
+
 
 
 
